<resources>
    <string name="app_name">TrackUrExpenses</string>
    <string name="know_your_expense_history">Know your expense history</string>
    <string name="welcome">Welcome!!</string>
    <string name="know_your_best_store_from_history">Know your best store from history</string>
    <string name="upload_your_receipt">Upload Your Receipt</string>
    <string name="enter_expense_manually">Enter expense manually</string>
    <string name="choose_image">Choose Image</string>
    <string name="todo">TODO</string>
    <string name="back_to_home">Back to Home</string>
    <string name="upload">upload</string>
    <string name="enter_the_details">Enter the details</string>
    <string name="submit">submit</string>
    <string name="price">price</string>
    <string name="expenses_history">Expenses History</string>
    <string name="quantity">Quantity</string>
    <string name="item">Item</string>
    <string name="store">Store</string>
    <string name="date">Date</string>
    <string name="Home_screen">Home screen</string>
</resources>
