<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualentryActivity">
    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/australian_budget_superannuation_money"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="164dp"
        android:alpha="0.50"/>

    <TextView
        android:id="@+id/qty_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/amarante"
        android:text="@string/quantity"
        android:textColor=" #000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Item_text"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="@+id/Item_text"
        app:layout_constraintTop_toBottomOf="@+id/Item_text" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/amarante"
        android:text="@string/price"
        android:textColor=" #000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/qty_text3"
        app:layout_constraintStart_toStartOf="@+id/qty_text3"
        app:layout_constraintTop_toBottomOf="@+id/qty_text3" />

    <EditText
        android:id="@+id/store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/date_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/date_input"
        app:layout_constraintTop_toBottomOf="@+id/date_input" />

    <TextView
        android:id="@+id/enter_the_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/amarante"
        android:inputType="text"
        android:text="@string/enter_the_details"
        android:textColor=" #000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/date_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Ex: 24 April 2020"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/enter_the_details"
        app:layout_constraintTop_toBottomOf="@+id/enter_the_details" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/amarante"
        android:text="Date"
        android:textColor=" #000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_the_details" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/amarante"
        android:text="StoreName"
        android:textColor=" #000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/date_text"
        app:layout_constraintTop_toBottomOf="@+id/date_text" />

    <TextView
        android:id="@+id/Item_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/amarante"
        android:text="Item"
        android:textColor=" #000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/Item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/store_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/store_name"
        app:layout_constraintTop_toBottomOf="@+id/store_name" />

    <EditText
        android:id="@+id/quantity_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/Item_name"
        app:layout_constraintStart_toStartOf="@+id/Item_name"
        app:layout_constraintTop_toBottomOf="@+id/Item_name" />

    <EditText
        android:id="@+id/price_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/quantity_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/quantity_input"
        app:layout_constraintTop_toBottomOf="@+id/quantity_input" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_corners"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/enter_the_details"
        app:layout_constraintStart_toStartOf="@+id/enter_the_details"
        app:layout_constraintTop_toBottomOf="@+id/price_input" />

    <TextView
        android:id="@+id/back_home_textview"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:text="@string/back_to_home"
        android:textColor="#0D47A1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/submit_btn"
        app:layout_constraintStart_toStartOf="@+id/submit_btn"
        app:layout_constraintTop_toBottomOf="@+id/submit_btn"
        tools:layout_editor_absoluteY="639dp" />

</androidx.constraintlayout.widget.ConstraintLayout>